fixed rock on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1453,7 +1453,7 @@ body {
     border-top: 5px solid #ddd;
   }
   #rock-wrapper #rock #rockImg {
-    margin: 15px auto;
+    margin: 17px auto;
     width: 50%;
   }
   .game-container .step-1 {
